--- a/fpl-api/pyproject.toml
+++ b/fpl-api/pyproject.toml
@@ -1,19 +1,16 @@
-[project]
+[tool.poetry]
 name = "fpl-api"
 version = "0.1.0"
-description = ""
-authors = [
-    {name = "urquha",email = "andy.urquhart@hotmail.co.uk"}
-]
-readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "fastapi (>=0.115.8,<0.116.0)",
-    "uvicorn (>=0.34.0,<0.35.0)",
-    "gunicorn (>=23.0.0,<24.0.0)"
-]
+description = "FastAPI application for Fantasy Premier League"
+authors = ["Your Name <your.email@example.com>"]
+package-mode = false
 
+[tool.poetry.dependencies]
+python = "^3.11"
+fastapi = "^0.115.0"
+uvicorn = "^0.34.0"
+gunicorn = "^23.0.0"
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"]
