--- a/fpl-api/pyproject.toml
+++ b/fpl-api/pyproject.toml
@@ -13,4 +13,4 @@ gunicorn = "^23.0.0"
 
 [build-system]
 requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"]
+build-backend = "poetry.core.masonry.api"
